# Polygon2DOMjudge

./: .gitignore  .pep8  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.cn.md  README.md  config.example.toml  p2d.py  pyproject.toml  read.me  release.sh  testlib.h
.github/problem-matchers/: pytest.json
.github/workflows/: release.yml  test.yml
asset/: config.json  testlib.h
checker/: fcmp.cpp  hcmp.cpp  md5sum  nyesno.cpp  rcmp4.cpp  rcmp6.cpp  rcmp9.cpp  wcmp.cpp  yesno.cpp
checkers/: md5sum
p2d/: .gitignore  README.cn.md  README.md  __init__.py  __main__.py  cli.py  config.json  contest.py  exceptions.py  models.py  p2d.py  pipeline.py  polygon.py  pyproject.toml  testlib.h  typing.py  utils.py
p2d/asset/: config.toml  testlib.h
p2d/p2d/: p2d.py
p2d/steps/: __init__.py  archive.py  attachments.py  jury_solutions.py  metadata.py  statement.py  testcases.py
p2d/test/: test_p2d.py
p2d/test/test_data/example/: problem.xml
p2d/test/test_data/example/files/: check.cpp  checker.cpp  statements.ftl  validator5.cpp
p2d/test/test_data/example/solutions/: std.cpp  std.cpp.desc  wrong.cpp  wrong.cpp.desc
p2d/test/test_data/example/statement-sections/chinese/: input.tex  legend.tex  name.tex  output.tex
p2d/test/test_data/example/statement-sections/english/: example.01  input.tex  legend.tex  name.tex  output.tex
p2d/test/test_data/example/statements/.html/chinese/: problem.html
p2d/test/test_data/example/statements/.html/english/: problem-statement.css  problem.html
p2d/test/test_data/example/statements/chinese/: example.01  problem-properties.json  problem.tex
p2d/test/test_data/example/statements/english/: problem-properties.json  problem.tex
p2d/test/test_data/example/tests/: 02  03  04  05  06  07  08  09  10  11  12  13  14  15
p2d/testlib/: testlib.h
p2d/testlib/patch/: domjudge.patch
p2d/tests/: test_p2d.py
patch/: 0.9.38.patch  domjudge.patch
test/: conftest.py  test_cli.py  test_contest.py  test_p2d.py  test_utils.py
test/fixtures/: config-broken2.toml
test/helpers/: assertions.py  dataloader.py  models.py
test/test_data/: config-broken.toml  contest-broken.xml  contest.xml  data.yaml
test/utils/: assertions.py  dataloader.py  models.py  validator.py
testlib/: README.md
