[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "p2d"
dynamic = ["version"]
description = "Simple python script converting polygon package to domjudge(kattis) package"
license = { text = "MIT" }
authors = [{ name = "cubercsl", email = "hi@cubercsl.site" }]
maintainers = [
    { name = "cubercsl", email = "hi@cubercsl.site" },
    { name = "Dup4", email = "hi@dup4.com" },
]
readme = "README.md"
keywords = ["Polygon", "DOMjudge", "Kattis", "Codeforces"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "tomli>=2.0.1",
    "typer-slim[standard]>=0.12.5",
]

[project.urls]
homepage = "https://github.com/cn-xcpc-tools/Polygon2Domjudge"
documentation = "https://github.com/cn-xcpc-tools/Polygon2Domjudge"
repository = "https://github.com/cn-xcpc-tools/Polygon2Domjudge"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "types-pyyaml>=6.0.12.20240917",
    "mypy>=1.11.2",
    "pytest-cov>=5.0.0",
]

[project.scripts]
p2d = 'p2d.cli:main'
p2d-contest = 'p2d.contest:main'

[tool.ruff]
line-length = 127

[tool.pytest.ini_options]
addopts = "--cov=p2d --cov-report term-missing --cov-report xml --cov-fail-under=80"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise ProcessError",
]

[tool.hatch.version.raw-options]
git_describe_command = [
    "git",
    "describe",
    "--dirty",
    "--tags",
    "--long",
    "--first-parent",
]

[tool.hatch.build.hooks.vcs]
version-file = "p2d/_version.py"

[tool.hatch.version]
source = "vcs"
